fix: Improve readability of cards when hovering over them in dark mode

--- a/assets/scss/base/properties.scss
+++ b/assets/scss/base/properties.scss
@@ -116,7 +116,7 @@ html {
         --card-bg: var(--page-bg);
         --card-text: var(--text-primary);
         --card-border: #6c757d;
-        --card-linked-hover: var(--link-hover);
+        --card-linked-hover: #0dcaf0;
         --card-header-bg: #343a40;
         --text-muted: #ced4da;
         --page-link: #ced4da;
